--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 target/
+lib/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/lib/
 
 ### STS ###
 .apt_generated
